// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PaginationLinks should match snapshot with both links disabled 1`] = `
<nav
  class="root"
>
  <div
    class="prev"
  >
    <svg
      class="lucide lucide-chevron-left arrowIcon disabled"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m15 18-6-6 6-6"
      />
    </svg>
  </div>
  <div
    class="pageNumberList pageNumberList1Items"
  >
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink currentPage"
      href="/s?page=1&param=foobar"
      title="PaginationLinks.toPage"
    >
      1
    </a>
  </div>
  <div
    class="next"
  >
    <svg
      class="lucide lucide-chevron-right arrowIcon disabled"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </div>
</nav>
`;

exports[`PaginationLinks should match snapshot with both links enabled 1`] = `
<nav
  class="root"
>
  <a
    aria-label="PaginationLinks.previous"
    class="prev"
    href="/s?page=1&param=foobar"
    title="PaginationLinks.previous"
  >
    <svg
      class="lucide lucide-chevron-left arrowIcon"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m15 18-6-6 6-6"
      />
    </svg>
  </a>
  <div
    class="pageNumberList pageNumberList3Items"
  >
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=1&param=foobar"
      title="PaginationLinks.toPage"
    >
      1
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink currentPage"
      href="/s?page=2&param=foobar"
      title="PaginationLinks.toPage"
    >
      2
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=3&param=foobar"
      title="PaginationLinks.toPage"
    >
      3
    </a>
  </div>
  <a
    aria-label="PaginationLinks.next"
    class="next"
    href="/s?page=3&param=foobar"
    title="PaginationLinks.next"
  >
    <svg
      class="lucide lucide-chevron-right arrowIcon"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
</nav>
`;

exports[`PaginationLinks should match snapshot with prev disabled and next enabled 1`] = `
<nav
  class="root"
>
  <div
    class="prev"
  >
    <svg
      class="lucide lucide-chevron-left arrowIcon disabled"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m15 18-6-6 6-6"
      />
    </svg>
  </div>
  <div
    class="pageNumberList pageNumberList3Items"
  >
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink currentPage"
      href="/s?page=1&param=foobar"
      title="PaginationLinks.toPage"
    >
      1
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=2&param=foobar"
      title="PaginationLinks.toPage"
    >
      2
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=3&param=foobar"
      title="PaginationLinks.toPage"
    >
      3
    </a>
  </div>
  <a
    aria-label="PaginationLinks.next"
    class="next"
    href="/s?page=2&param=foobar"
    title="PaginationLinks.next"
  >
    <svg
      class="lucide lucide-chevron-right arrowIcon"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
</nav>
`;

exports[`PaginationLinks should match snapshot with prev enabled and next disabled 1`] = `
<nav
  class="root"
>
  <a
    aria-label="PaginationLinks.previous"
    class="prev"
    href="/s?page=2&param=foobar"
    title="PaginationLinks.previous"
  >
    <svg
      class="lucide lucide-chevron-left arrowIcon"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m15 18-6-6 6-6"
      />
    </svg>
  </a>
  <div
    class="pageNumberList pageNumberList3Items"
  >
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=1&param=foobar"
      title="PaginationLinks.toPage"
    >
      1
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink"
      href="/s?page=2&param=foobar"
      title="PaginationLinks.toPage"
    >
      2
    </a>
    <a
      aria-label="PaginationLinks.toPage"
      class="toPageLink currentPage"
      href="/s?page=3&param=foobar"
      title="PaginationLinks.toPage"
    >
      3
    </a>
  </div>
  <div
    class="next"
  >
    <svg
      class="lucide lucide-chevron-right arrowIcon disabled"
      fill="currentColor"
      height="15"
      role="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </div>
</nav>
`;
